<?xml version="1.0"?>
<package format="2">
  <name>paho_cpp</name>
  <version>1.1.0</version>
  <description>
    Paho mqtt C++ wrapper over the Paho mqtt C client.
  </description>

  <maintainer email="alexis@thekobi.com">Alexis Paques</maintainer>

  <license>EPLv2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>paho_c</depend>

</package>
